Fix T94380: Scrolling zooms in spreadsheet data set region

The region used to be type "Channels", but the standard for this
type is "Tools", which is what the file browser uses. This follows
the changes in rB01df48a98394, which also make the region more
"standard."